--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
+<head> <script src="https://d3js.org/d3.v5.min.js"> </script> </head>
 <body>
-    
-</body>
+<svg></svg>
+<script src= "graph.js"></script>
+    </body>
 </html>
