--- a/index.html
+++ b/index.html
@@ -1,6 +1,24 @@
 <html>
-<head> <script src="https://d3js.org/d3.v5.min.js"> </script> </head>
+<head> <script src="https://d3js.org/d3.v5.min.js"> </script> 
+    <style>
+        div {
+            background-color: brown;
+            display: block;
+            float: right;
+            height: 50px;
+            width: 100px;
+        }
+        svg {
+        margin-left: 200px;
+        margin-top: 200px;
+        }
+    
+    </style>
+    </head>
 <body>
+    <h1>Penguin grades</h1>
+    <div id="next"> next </div>
+   
 <svg></svg>
 <script src= "graph.js"></script>
     </body>
