--- a/index.html
+++ b/index.html
@@ -1,23 +1,20 @@
 <html>
 <head> <script src="https://d3js.org/d3.v5.min.js"> </script> 
-    <style>
-        div {
-            background-color: brown;
-            display: block;
-            float: right;
-            height: 50px;
-            width: 100px;
+    <style> svg{ border: solid;
+        clear: left;
+        float: left;
+        background-color: white}
+        button{
+            float: left;
+            font-size: 20px;
+            background-color: beige;
         }
-        svg {
-        margin-left: 200px;
-        margin-top: 200px;
-        }
-    
+        body{background-color: blanchedalmond;}
     </style>
     </head>
 <body>
     <h1>Penguin grades</h1>
-    <div id="next"> next </div>
+
    
 <svg></svg>
 <script src= "graph.js"></script>
